--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
       <p>JIN Nextgent</span></p>
     </a>
     <div class="header__links">
-      <a href="https://vk.com/club224148568" target="_blank">ВКонтакте</a>
-      <a href="https://discord.gg/X8xkBDRKAW" target="_blank">Discord</a>
+      <a href="https://vk.com/jinextgent" target="_blank">ВКонтакте</a>
+      <a href="https://discord.gg/mJr3y9XADA" target="_blank">Discord</a>
       </a>
           </div>
   </header>
@@ -55,19 +55,19 @@
     <img src="img/maingbgif.gif" alt="">
     <div class="main__content">
       <div class="main__sign">
-        <h2>JIN Nextgent</span></h2>
+        <h2>JIN Nextgent 1.1</span></h2>
         <p>Лаунчер для игры</p>
         <p>на версиях 1.16.5</p>
       </div>
       <div class="main__buttons">
         <div>
-          <a class="main__button" href="#" data-micromodal-trigger="modal-login"Купить на Всегда вк
-          <br> за 90 Рублей на Всегда</a>
+          <a class="main__button" href="https://vk.com/jinextgent?w=product-224148568_8950917%2Fquery"
+          <br> за 90 Рб премиум + навсегда </a>
           <p class="main__button_sign" style="color: #18ff03;"></p>
         </div>
         <div>
-          <a class="main__button" href="#" data-micromodal-trigger="modal-login"Купить навсегда
-          <br> за 469 Рублей навсегда</a>
+          <a class="main__button" href="https://vk.com/jinextgent?w=product-224148568_8952605%2Fquery"
+          <br> Free Версия </a>
           <p class="main__button_sign" style="color: #FFF;"></p>
         </div>
         </div>
